Catboost Pipeline, no bugs

--- a/docQA/configs/processor_config.json
+++ b/docQA/configs/processor_config.json
@@ -1,5 +1,7 @@
 {
     "model_name": "facebook/wmt19-ru-en",
+    "model_path": "",
+    "local_files_only": true,
     "device": "cuda",
     "retriever_sep": "\n",
     "ranker_sep": "\n",
