--- a/docQA/configs/ranker_config.json
+++ b/docQA/configs/ranker_config.json
@@ -1,12 +1,13 @@
 {
     "model_name": "sentence-transformers/all-MiniLM-L6-v2",
     "model_path": "",
+    "local_files_only": true,
     "lr": 1e-5,
     "is_training": false,
     "normalize": true,
     "max_grad_norm": 1,
     "device": "cuda",
-    "epochs": 3,
+    "epochs": 5,
     "training_batch_size": 64,
     "display_progress_bar": true,
     "cossim_scale": 20,
