--- a/docQA/configs/ranker_config.json
+++ b/docQA/configs/ranker_config.json
@@ -7,10 +7,11 @@
     "normalize": true,
     "max_grad_norm": 1,
     "device": "cuda",
-    "epochs": 2,
-    "training_batch_size": 36,
+    "epochs": 50,
+    "training_batch_size": 24,
     "display_progress_bar": true,
     "cossim_scale": 20,
-    "evaluation_batch_size": 36,
-    "max_length": 512
+    "evaluation_batch_size": 24,
+    "max_length": 256,
+    "max_question_length": 256
 }
